fix overflow

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -47,7 +47,7 @@
   cursor: pointer;
 }
 
-@media screen and (max-width: 627px) {
+@media screen and (max-width: 715px) {
   .card {
     align-items: center;
     width: auto;
