--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -12,7 +12,7 @@
   border-bottom: 1px rgba(33, 33, 33, 0.4) solid;
 }
 
-@media screen and (max-width: 627px) {
+@media screen and (max-width: 715px) {
   .cards {
     padding-top: 8px;
   }
