--- a/blocks/content.css
+++ b/blocks/content.css
@@ -2,7 +2,7 @@
   padding: 0 20px;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 450px) {
   .content {
     padding: 0 16px;
   }
