--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -15,7 +15,6 @@
   display: flex;
   flex-direction: column;
   font-weight: 500;
-  overflow: hidden;
   color: rgba(33, 33, 33, 1);
 }
 
@@ -23,10 +22,8 @@
   font-size: 32px;
   font-weight: 500;
   line-height: 1;
-  width: 420px;
   margin: 0 0 12px;
   text-overflow: ellipsis;
-  overflow: hidden;
   display: -webkit-box;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
@@ -39,7 +36,6 @@
   max-width: 420px;
   color: rgba(33, 33, 33, 0.7);
   text-overflow: ellipsis;
-  overflow: hidden;
   display: -webkit-box;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
@@ -55,7 +51,7 @@
   background-color: transparent;
   color: rgba(33, 33, 33, 1);
   display: flex;
-  align-items: baseline;
+  align-items: center;
   gap: 8px;
   opacity: 70%;
   transition: opacity 0.4s;
@@ -85,7 +81,7 @@
   cursor: pointer;
 }
 
-@media screen and (max-width: 655px) {
+@media screen and (max-width: 715px) {
   .profile {
     flex-direction: column;
     margin: 0 auto 12px auto;
